# dfctl

./: .gitignore  Makefile  README.md  dfctl  go.mod  main.go  pyproject.toml  requirements.txt
.dev/: run  tproject
cmd/: root.go
src/: README.md  go.mod  main.go  requirements.txt
src/cli/: __main__.py
src/cmd/: install.go  mk.go  rm.go  root.go
src/dfctl/cli/: __init__.py  __main__.py
src/dfctl/cli/cmd/: __init__.py  deps.py  edit.py  install.py  ls.py  mk.py  pull.py  push.py  rm.py  uninstall.py
src/dfctl/lib/: config.py  elevate.py  git.py  misc.py  parser.py  target.py
src/lib/: config.py  misc.py  parser.py  target.py
