[project]
name = "dfctl"
version = "0.0.1"
authors = [
  { name="goveiajoao" },
]
description = "A simple and easy dotfiles control tool"
readme = "README.md"
# license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
	"elevate==0.1.3",
	"gitdb==4.0.12",
	"GitPython==3.1.50",
	"markdown-it-py==4.2.0",
	"mdurl==0.1.2",
	"Pygments==2.20.0",
	"rich==15.0.0",
	"smmap==5.0.3",
]

[project.urls]
Homepage = "https://github.com/goveiajoao/dfctl"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
dfctl = "cli:main"
